Extracted CSS components with the help of TailwindCSS

--- a/public/index.html
+++ b/public/index.html
@@ -47,39 +47,30 @@
           </div>
           <div class="mt-4 w-full flex justify-evenly items-center">
             <a
-              class="text-gray-300 hover:text-gray-400 focus:text-gray-400 transition-transform duration-150 transform hover:scale-110 focus:scale-110"
+              class="btn-round"
               href="mailto:georgeletsos391@gmail.com"
               target="_blank"
               rel="noopener noreferrer"
             >
-              <svg
-                data-svgid="mail"
-                class="w-9 h-9 md:w-12 md:h-12 fill-current"
-              ></svg>
+              <svg data-svgid="mail" class="btn-round-icon"></svg>
               <span class="sr-only">Mail</span>
             </a>
             <a
-              class="text-gray-300 hover:text-gray-400 focus:text-gray-400 transition-transform duration-150 transform hover:scale-110 focus:scale-110"
+              class="btn-round"
               href="https://www.linkedin.com/in/george-letsos/"
               target="_blank"
               rel="noopener noreferrer"
             >
-              <svg
-                data-svgid="linkedin"
-                class="w-9 h-9 md:w-12 md:h-12 fill-current"
-              ></svg>
+              <svg data-svgid="linkedin" class="btn-round-icon"></svg>
               <span class="sr-only">LinkedIn</span>
             </a>
             <a
-              class="text-gray-300 hover:text-gray-400 focus:text-gray-400 transition-transform duration-150 transform hover:scale-110 focus:scale-110"
+              class="btn-round"
               href="https://github.com/georgeletsos/"
               target="_blank"
               rel="noopener noreferrer"
             >
-              <svg
-                data-svgid="github"
-                class="w-9 h-9 md:w-12 md:h-12 fill-current"
-              ></svg>
+              <svg data-svgid="github" class="btn-round-icon"></svg>
               <span class="sr-only">Github</span>
             </a>
           </div>
@@ -129,46 +120,38 @@
           role="region"
           aria-label="Lightning Ygo Card Catalog"
         >
-          <div class="bg-gray-900 shadow-border-red rounded-lg">
-            <div class="p-4">
-              <div class="text-red-500 text-sm font-semibold tracking-wide">
-                JavaScript &bull; Vue.js &bull; Vuex &bull; Jest &bull;
-                Bootstrap &bull; Sass
-              </div>
-              <h3 class="text-gray-300 text-lg font-semibold">
-                Lightning Ygo Card Catalog
-              </h3>
-              <p class="mt-4 text-gray-300">
-                A catalog of cards with advanced filtering means and an improved
-                user-friendly UI, that runs on the Lightning Ygo API. It's based
-                on the mobile/Steam game of Yu-Gi-Oh! Duel Links.
-              </p>
-              <div class="mt-4 flex text-sm font-semibold tracking-wide">
-                <a
-                  class="text-gray-300 flex items-center hover:underline focus:underline"
-                  href="https://lightning-ygo.herokuapp.com/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  See Project
-                  <svg
-                    data-svgid="external-link"
-                    class="ml-1 w-4 h-4 fill-current"
-                  ></svg>
-                </a>
-                <a
-                  class="ml-4 text-gray-300 flex items-center hover:underline focus:underline"
-                  href="https://github.com/georgeletsos/lightning-ygo/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  GitHub Repo
-                  <svg
-                    data-svgid="external-link"
-                    class="ml-1 w-4 h-4 fill-current"
-                  ></svg>
-                </a>
-              </div>
+          <div class="project">
+            <div class="project-eyebrow">
+              JavaScript &bull; Vue.js &bull; Vuex &bull; Jest &bull; Bootstrap
+              &bull; Sass
+            </div>
+            <h3 class="project-title">
+              Lightning Ygo Card Catalog
+            </h3>
+            <p class="project-description">
+              A catalog of cards with advanced filtering means and an improved
+              user-friendly UI, that runs on the Lightning Ygo API. It's based
+              on the mobile/Steam game of Yu-Gi-Oh! Duel Links.
+            </p>
+            <div class="project-links-group">
+              <a
+                class="project-link hover:underline focus:underline"
+                href="https://lightning-ygo.herokuapp.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                See Project
+                <svg data-svgid="external-link" class="project-link-icon"></svg>
+              </a>
+              <a
+                class="ml-4 project-link hover:underline focus:underline"
+                href="https://github.com/georgeletsos/lightning-ygo/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                GitHub Repo
+                <svg data-svgid="external-link" class="project-link-icon"></svg>
+              </a>
             </div>
           </div>
         </article>
@@ -177,34 +160,29 @@
           role="region"
           aria-label="Lightning Ygo API"
         >
-          <div class="bg-gray-900 shadow-border-red rounded-lg">
-            <div class="p-4">
-              <div class="text-red-500 text-sm font-semibold tracking-wide">
-                JavaScript &bull; Node.js &bull; Express.js &bull; MongoDB
-                &bull; Mongoose ODM &bull; Jest
-              </div>
-              <h3 class="text-gray-300 text-lg font-semibold">
-                Lightning Ygo API
-              </h3>
-              <p class="mt-4 text-gray-300">
-                Provides quick access, with improved filtering capabilities, to
-                almost all the cards (over 6k) that are available in the
-                mobile/Steam game of Yu-Gi-Oh! Duel Links.
-              </p>
-              <div class="mt-4 flex text-sm font-semibold tracking-wide">
-                <a
-                  class="text-gray-300 flex items-center hover:underline focus:underline"
-                  href="https://github.com/georgeletsos/lightning-ygo-api/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  GitHub Repo
-                  <svg
-                    data-svgid="external-link"
-                    class="ml-1 w-4 h-4 fill-current"
-                  ></svg>
-                </a>
-              </div>
+          <div class="project">
+            <div class="project-eyebrow">
+              JavaScript &bull; Node.js &bull; Express.js &bull; MongoDB &bull;
+              Mongoose ODM &bull; Jest
+            </div>
+            <h3 class="project-title">
+              Lightning Ygo API
+            </h3>
+            <p class="project-description">
+              Provides quick access, with improved filtering capabilities, to
+              almost all the cards (over 6k) that are available in the
+              mobile/Steam game of Yu-Gi-Oh! Duel Links.
+            </p>
+            <div class="project-links-group">
+              <a
+                class="project-link hover:underline focus:underline"
+                href="https://github.com/georgeletsos/lightning-ygo-api/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                GitHub Repo
+                <svg data-svgid="external-link" class="project-link-icon"></svg>
+              </a>
             </div>
           </div>
         </article>
@@ -213,46 +191,38 @@
           role="region"
           aria-label="Concurrent Chat"
         >
-          <div class="bg-gray-900 shadow-border-red rounded-lg">
-            <div class="p-4">
-              <div class="text-red-500 text-sm font-semibold tracking-wide">
-                JavaScript &bull; Node.js &bull; MongoDB &bull; Mongoose ODM
-                &bull; Socket.IO &bull; TailwindCSS
-              </div>
-              <h3 class="text-gray-300 text-lg font-semibold">
-                Concurrent Chat
-              </h3>
-              <p class="mt-4 text-gray-300">
-                Community chat application with chat rooms/channels that
-                utilizes concurrency in JavaScript, both on the client and the
-                server side. It's based on Discord.
-              </p>
-              <div class="mt-4 flex text-sm font-semibold tracking-wide">
-                <a
-                  class="text-gray-300 flex items-center hover:underline focus:underline"
-                  href="https://concurrent-chat-gl.herokuapp.com/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  See Project
-                  <svg
-                    data-svgid="external-link"
-                    class="ml-1 w-4 h-4 fill-current"
-                  ></svg>
-                </a>
-                <a
-                  class="ml-4 text-gray-300 flex items-center hover:underline focus:underline"
-                  href="https://github.com/georgeletsos/concurrent-chat/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  GitHub Repo
-                  <svg
-                    data-svgid="external-link"
-                    class="ml-1 w-4 h-4 fill-current"
-                  ></svg>
-                </a>
-              </div>
+          <div class="project">
+            <div class="project-eyebrow">
+              JavaScript &bull; Node.js &bull; MongoDB &bull; Mongoose ODM
+              &bull; Socket.IO &bull; TailwindCSS
+            </div>
+            <h3 class="project-title">
+              Concurrent Chat
+            </h3>
+            <p class="project-description">
+              Community chat application with chat rooms/channels that utilizes
+              concurrency in JavaScript, both on the client and the server side.
+              It's based on Discord.
+            </p>
+            <div class="project-links-group">
+              <a
+                class="project-link hover:underline focus:underline"
+                href="https://concurrent-chat-gl.herokuapp.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                See Project
+                <svg data-svgid="external-link" class="project-link-icon"></svg>
+              </a>
+              <a
+                class="ml-4 project-link hover:underline focus:underline"
+                href="https://github.com/georgeletsos/concurrent-chat/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                GitHub Repo
+                <svg data-svgid="external-link" class="project-link-icon"></svg>
+              </a>
             </div>
           </div>
         </article>
