Fixed the Contact rounded buttons spacing on mobile Also removed some unused classes

--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,8 @@
       ></iframe
     ></noscript>
     <header class="px-4 pt-4 max-w-screen-lg mx-auto">
-      <div class="flex justify-center items-center flex-col md:flex-row">
-        <section
-          class="flex flex-col justify-center items-center"
-          aria-label="Contact"
-        >
+      <div class="flex items-center flex-col md:flex-row">
+        <section class="flex flex-col" aria-label="Contact">
           <div>
             <svg
               data-svgid="avatar"
@@ -45,7 +42,7 @@
             ></svg>
             <span class="sr-only">George Letsos</span>
           </div>
-          <div class="mt-4 w-full flex justify-evenly items-center">
+          <div class="mt-4 w-full flex justify-between md:justify-evenly">
             <a
               class="btn-round"
               href="mailto:georgeletsos391@gmail.com"
