Added Lwitter project

--- a/public/index.html
+++ b/public/index.html
@@ -112,6 +112,41 @@
         Projects
       </h2>
       <div class="-mx-2 flex flex-col md:flex-row flex-wrap">
+        <article class="px-2 mt-4 w-full" role="region" aria-label="Lwitter">
+          <div class="project">
+            <div class="project-eyebrow">
+              PHP &bull; Laravel &bull; MySQL &bull; TailwindCSS
+            </div>
+            <h3 class="project-title">
+              Lwitter
+            </h3>
+            <p class="project-description">
+              Social networking service where authenticated users can post
+              messages known as “tweets”, like or dislike these “tweets” and
+              follow other users. It's based on Twitter.
+            </p>
+            <div class="project-links-group">
+              <a
+                class="project-link hover:underline focus:underline"
+                href="https://lwitter.herokuapp.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                See Project
+                <svg data-svgid="external-link" class="project-link-icon"></svg>
+              </a>
+              <a
+                class="ml-4 project-link hover:underline focus:underline"
+                href="https://github.com/georgeletsos/lwitter/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                GitHub Repo
+                <svg data-svgid="external-link" class="project-link-icon"></svg>
+              </a>
+            </div>
+          </div>
+        </article>
         <article
           class="px-2 mt-4 w-full"
           role="region"
