Changed "Web Developer" to "Full-Stack Web Developer"

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,8 @@
             Welcome! My name is <span class="text-red-500">George Letsos</span>.
           </h1>
           <p class="mt-4 text-gray-300 text-center md:text-left">
-            Passionate <span class="text-red-500">Web Developer</span>, who's
+            Passionate
+            <span class="text-red-500">Full-Stack Web Developer</span>, who's
             interested in the ways things work on the Web and how to efficiently
             optimize them. An avid developer of easy-to-use websites and web
             apps.
