Changed the summary

--- a/public/index.html
+++ b/public/index.html
@@ -82,15 +82,11 @@
             Passionate
             <span class="text-red-500">Full-Stack Web Developer</span>, who's
             interested in the ways things work on the Web and how to efficiently
-            optimize them. An avid developer of easy-to-use websites and web
-            apps.
-          </p>
-          <p class="mt-4 text-gray-300 text-center md:text-left">
-            I'd like to consider myself as a hard worker that's able to come up
-            with creative solutions to problems, while also being a great team
-            player and articulate communicator. I'm also highly enthused about
-            learning new technologies and creating projects by using them in the
-            best way possible.
+            optimize them. Hard worker with the ability to come up with creative
+            solutions to problems, while also being a great team player and
+            articulate communicator. Constantly self-improves through education
+            and is highly enthused about learning new technologies and creating
+            projects by using them in the best way possible.
           </p>
           <div class="mt-4 text-center md:text-left">
             <a
@@ -163,8 +159,8 @@
             </h3>
             <p class="project-description">
               A catalog of cards with advanced filtering means and an improved
-              user-friendly UI, that runs on the Lightning Ygo API. It's based
-              on the mobile/Steam game of Yu-Gi-Oh! Duel Links.
+              user-friendly UI that runs on the Lightning Ygo API. It's based on
+              the mobile/Steam game of Yu-Gi-Oh! Duel Links.
             </p>
             <div class="project-links-group">
               <a
