Changed "Full-Stack" to "Full Stack"

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
           </h1>
           <p class="mt-4 text-gray-300 text-center md:text-left">
             Passionate
-            <span class="text-red-500">Full-Stack Web Developer</span>, who's
+            <span class="text-red-500">Full Stack Web Developer</span>, who's
             interested in the ways things work on the Web and how to efficiently
             optimize them. Hard worker with the ability to come up with creative
             solutions to problems, while also being a great team player and
